# yaschperitsy

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.txt  yaschperitsy
.github/workflows/: build.yml
App/: App.cpp  App.hpp  CMakeLists.txt
App/Scene/: Scene.hpp
ECS/: CMakeLists.txt  Entity.cpp  Entity.hpp  Manager.cpp  Manager.hpp  TypesID.cpp  TypesID.hpp
ECS/Components/: Component.hpp  FireComponent.hpp  KeyboardController.hpp  MouseController.hpp  SpriteComponent.hpp  TransformComponent.hpp
Events/: AppEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
GameEngine/: CMakeLists.txt  GameEngine.cpp  GameEngine.hpp
GameEngine/Scene/: Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp
GraphicEngine/: CMakeLists.txt  GraphicEngine.cpp  GraphicEngine.hpp  GraphicSystem.cpp  Renderer.cpp  Types.hpp
GraphicEngine/RendererImpl/: IRendererImpl.hpp  RendererImpl.cpp
GraphicEngine/ResourceManager/: IStorageGetter.hpp  IStorageSetter.hpp  ResourceManager.hpp
IOSystem/: CMakeLists.txt  GraphicSystem.hpp  IOSystem.cpp  IOSystem.hpp  Renderer.cpp  Renderer.hpp  Types.hpp
IOSystem/Input/: Input.cpp  Input.hpp
IOSystem/RendererImpl/: IRendererImpl.hpp  RendererImpl.hpp
IOSystem/ResourceManager/: IStorageSetter.hpp  ResourceManager.cpp  ResourceManager.hpp  ResourceStorage.cpp  ResourceStorage.hpp
Logger/: Logger.hpp
Timer/: Timer.hpp
Utility/: Vector.hpp
Yaschperitsy/: CMakeLists.txt  Game.cpp  Game.hpp  Style.hpp  settingsYaml.hpp  styleYaml.hpp
Yaschperitsy/Entities/: Ammo.hpp  Player.hpp  UILabel.hpp  Yaschperitsa.hpp
Yaschperitsy/Events/: UIEvent.hpp
Yaschperitsy/Scenes/GameEndScene/: GameEndScene.cpp  GameEndScene.hpp
Yaschperitsy/Scenes/GameScene/: GameScene.cpp  GameScene.hpp  GameSettings.hpp  PlayerController.hpp  UIController.hpp  YaschperitsyController.cpp  YaschperitsyController.hpp
Yaschperitsy/Scenes/GameScene/Controllers/: Controller.hpp  PlayerController.hpp  UIController.hpp  YaschperitsyController.cpp  YaschperitsyController.hpp
Yaschperitsy/Scenes/MainMenuScene/: MainMenuScene.cpp  MainMenuScene.hpp
include/: app.h  background.h  components.h  controller.h  ecs.h  entity.h  game.h  game_parameters.h  keyboard_controller.h  menu.h  resource_manager.h  topbar.h  utility.h  vector2D.h  window.h
include/ecs/: component.h  components.h  ecs.h  entity.h  icomponent.h  manager.h
include/ecs2/: entity.h  icomponent.h  manager.h
include/game/: background.h  game.h  topbar.h
include/ui/: base_screen.h  button.h  screen_manager.h  screens.h  settings_screen.h  start_screen.h
include/utility/: vector2D.h
old_ecs_tests/: test_ecs_entity.cpp
src/: CMakeLists.txt  app.cpp  controller.cpp  game.cpp  keyboard_controller.cpp  main.cpp  menu.cpp  resource_manager.cpp  topbar.cpp  utility.cpp  vector2D.cpp  window.cpp
src/app/: App.cpp  App.h  Layer.h  Log.cpp  Log.h  Logger.cpp  Logger.h  ResourceManager.cpp  ResourceManager.h  Window.cpp  Window.h  app.cpp  app.h  resource_manager.cpp  resource_manager.h  window.cpp  window.h
src/core/: App.cpp  App.h  App.hpp  CMakeLists.txt  Layer.cpp  Layer.h  Layer.hpp  LayerStack.cpp  LayerStack.h  LayerStack.hpp  Logger.cpp  Logger.hpp  ResourceManager.cpp  ResourceManager.h  Window.cpp  Window.h  Window.hpp
src/core.tests/: CMakeLists.txt
src/core.tests/events.tests/: AppEvents.cpp  EventDispatcher.cpp  KeyboardEvents.cpp  MouseEvents.cpp
src/core/ecs/: Entity.h  EntityCreator.cpp  EntityCreator.h  IComponent.h  Manager.h
src/core/ecs/components/: Components.h  FireComponent.h  MouseController.h  SpriteComponent.h  TransformComponent.h
src/core/events/: AppEvent.h  AppEvent.hpp  Event.hpp  KeyEvent.h  KeyEvent.hpp  MouseEvent.h  MouseEvent.hpp
src/core/input/: Input.cpp  Input.hpp
src/core/renderer/: Renderer.cpp  Renderer.hpp  Scene.hpp
src/core/resource_management/: ResourceManager.cpp
src/core/resource_manager/: ResourceManager.cpp  ResourceManager.hpp
src/core/scene/: Layer.hpp  LayerStack.cpp  LayerStack.hpp  Scene.cpp  Scene.hpp
src/ecs/: CMakeLists.txt  Entity.h  Entity.hpp  EntityCreator.cpp  EntityCreator.h  EntityCreator.hpp  IComponent.h  Manager.h  Manager.hpp  entity.h  game_fabric.cpp  game_fabric.h  icomponent.h  manager.h
src/game/: CMakeLists.txt  Game.cpp  Game.h  GameParameters.h  Topbar.h  UILayer.cpp  UILayer.h  background.h  game.cpp  game.h  game_parameters.h  main.cpp  topbar.cpp  topbar.h  vector2D.cpp
src/game/entities/: Ammunition.h  Organism.h
src/game/game/: Assets.cpp  Assets.hpp  Game.cpp  Game.hpp
src/game/game/button/: Button.cpp  Button.hpp
src/game/game/events/: GameWinEvent.hpp  UIEvent.hpp
src/game/game/label/: Label.cpp  Label.hpp
src/game/game/layers/: BackgroundLayer.cpp  BackgroundLayer.hpp  EntityLayer.cpp  EntityLayer.hpp  GameEndLayer.cpp  GameEndLayer.hpp  MainMenuLayer.cpp  MainMenuLayer.hpp  PauseMenuLayer.cpp  PauseMenuLayer.hpp  SettingsMenuLayer.cpp  SettingsMenuLayer.hpp  StateInfoLayer.hpp
src/game/game/main_menu/: EntityLayer.cpp  EntityLayer.hpp  MainMenu.cpp  MainMenu.hpp  SettingsMenu.cpp  SettingsMenu.hpp
src/game/game/scenes/: GameScene.cpp  GameScene.hpp  GameSettings.hpp  YaschperitsyController.cpp  YaschperitsyController.hpp
src/new_game/: App.h
src/old_game/: Background.h  GameParameters.h  OldGame.cpp  Topbar.cpp  Topbar.h
src/ui/: BaseScreen.cpp  BaseScreen.h  Button.h  ScreenManager.cpp  ScreenManager.h  Screens.cpp  UIButton.h  base_screen.cpp  base_screen.h  button.cpp  button.h  menu.cpp  screen_manager.cpp  screen_manager.h  screens.cpp  screens.h  settings_screen.cpp  start_screen.cpp
src/utility/: vector2D.h
src_old/: OldGame.cpp  OldGame.h  Topbar.h
src_old/game/: Game.h
tests/: test_ecs2_components.cpp  test_ecs2_entity.cpp  test_ecs2_icomponent.cpp  test_ecs2_manager.cpp  test_ecs_components.cpp  test_ecs_entity.cpp  test_ecs_icomponent.cpp  test_ecs_manager.cpp  test_entity_creator.cpp  test_vector2D.cpp  test_vector2D.h
tests/events_system/: app_events.cpp  (+3 more)
tests_old/: test_ecs_icomponent.cpp  test_vector2D.cpp
(+49 files in other folders)
